--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,21 @@
 
 /* Your CSS Code here. */
+.container{
+	display:flex;
+	column-gap:10px;
+	justify-content:space-between;
+}
+.box{
+	width:100px;
+	height:100px;
+}
+
+.box-1{
+	background-color:red;
+}
+.box-2{
+	background-color:green;
+}
+.box-3{
+	background-color:green;
+}
